fix: multiple images - add overflow scroll (#19)
* fix: multiple images - add overflow scroll

* Update product-page.module.css

--- a/src/pages/products/{ShopifyProduct.productType}/product-page.module.css
+++ b/src/pages/products/{ShopifyProduct.productType}/product-page.module.css
@@ -24,11 +24,12 @@
   padding-bottom: var(--space-2xl);
 }
 
-ul {
+.productImageList {
   display: flex;
+  overflow-x: scroll;
 }
 
-li {
+.productImageListItem {
   display: flex;
   flex: 0 0 100%;
   white-space: nowrap;
